# ros2_practice

./: CMakeLists.txt  package.xml
scripts/: listener.py  talker.py
src/: listener.cpp  talker.cpp
